tests/checker/ok/multiline_constructor_args.ow
First = String

Pair = First * Second

Second = String

main = () -> Unit {
    Pair(First("hello") * Second("world")).First.print()
}
