tests/checker/fail/unknown_field_access.ow
Birthday = String

User = Birthday * Username

Username = String

main = () -> Unit {
    User(Birthday("1990") * Username("alice")).Mystery.print()
}
